--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "HowSum",
+      "request": "launch",
+      "mainClass": "DynamicProgramming.Memoization.HowSum.java.HowSum",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
       "name": "CanSum",
       "request": "launch",
       "mainClass": "DynamicProgramming.Memoization.CanSum.java.CanSum",
