--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
       "type": "java",
       "name": "HowSum",
       "request": "launch",
+      "mainClass": "DynamicProgramming.Tabulation.BestSum.java.HowSum",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
+      "name": "HowSum",
+      "request": "launch",
       "mainClass": "DynamicProgramming.Tabulation.HowSum.java.HowSum",
       "projectName": "DSA_175c1f96"
     },
