--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "StacksAndQueues.Stack.Implementation.java.Main",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
       "name": "UniquePaths2",
       "request": "launch",
       "mainClass": "DynamicProgramming.Memoization.UniquePaths2.java.UniquePaths2",
