--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "UniquePaths2",
+      "request": "launch",
+      "mainClass": "LeetCode.UniquePaths2.java.UniquePaths2",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
+      "name": "UniquePaths",
+      "request": "launch",
+      "mainClass": "LeetCode.UniquePaths.java.UniquePaths",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
       "name": "HouseRobber",
       "request": "launch",
       "mainClass": "LeetCode.HouseRobber.java.HouseRobber",
