--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "HasPath",
+      "request": "launch",
+      "mainClass": "Graphs.HasPath.java.HasPath",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
       "name": "PSE",
       "request": "launch",
       "mainClass": "StacksAndQueues.Stack.PSE.java.PSE",
