--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "ComponentCounts",
+      "request": "launch",
+      "mainClass": "Graphs.ComponentCounts.java.ComponentCounts",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
       "name": "SumSubarraysMin",
       "request": "launch",
       "mainClass": "StacksAndQueues.Stack.SumSubarraysMin.java.SumSubarraysMin",
