--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "LargestComponent",
+      "request": "launch",
+      "mainClass": "Graphs.LargestComponent.java.LargestComponent",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
+      "name": "SubArrayRanges",
+      "request": "launch",
+      "mainClass": "StacksAndQueues.Stack.SubArrayRanges.java.SubArrayRanges",
+      "projectName": "DSA_175c1f96"
+    },
+    {
+      "type": "java",
       "name": "ComponentCounts",
       "request": "launch",
       "mainClass": "Graphs.ComponentCounts.java.ComponentCounts",
