--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CoinChange",
+            "request": "launch",
+            "mainClass": "Greedy.CoinChange.java.CoinChange",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "LemonadeChange",
             "request": "launch",
             "mainClass": "Greedy.LemonadeChange.java.LemonadeChange",
