--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "RottenOranges",
+            "request": "launch",
+            "mainClass": "Graphs.RottenOranges.java.RottenOranges",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "ScheduleMeeting",
             "request": "launch",
             "mainClass": "Greedy.ScheduleMeeting.java.ScheduleMeeting",
