--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "SurrondedRegions",
+            "request": "launch",
+            "mainClass": "SurrondedRegions",
+            "projectName": "DSA_175c1f96"
+        },
+        {
+            "type": "java",
             "name": "DetectCycle",
             "request": "launch",
             "mainClass": "Graphs.DetectCycle.java.DetectCycle",
